<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chatpass.me</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Chatpass.me</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="contacts">Contacts</string>
    <string name="create">Create</string>
    <string name="convos">Convos</string>
    <string name="profile">Profile</string>
    <string name="whistle_photo">Whistle Photo</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="send">Send</string>
    <string name="comments">Comments</string>
    <string name="create_question_hint">Post A Whistle</string>
    <string name="create_answer_hint_1">Clik 1</string>
    <string name="create_answer_hint_2">Clik 2</string>
    <string name="create_answer_hint_3">Clik 3 (optional)</string>
    <string name="create_answer_hint_4">Clik 4 (optional)</string>
    <string name="choose_image">Choose An Image</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="upload">Upload</string>
    <string name="take">Take</string>
    <string name="title_activity_view_whistle">ViewWhistleActivity</string>
    <string name="create_comment">Write A Comment...</string>
    <string name="select_a_pod">Select A Pod</string>
    <string name="title_activity_select_apod">SelectAPodActivity</string>
    <string name="friends">Friends</string>
    <string name="school">School</string>
    <string name="everyone">Everyone</string>
    <string name="report">Report</string>
    <string name="inappropriate">Inappropriate</string>
    <string name="repetitive">Repetitive</string>
    <string name="report_whistle">Report This Whistle</string>

</resources>